[package]
name = "rust-arduino-projects-book"
version = "0.1.0"
authors = ["Jeroen Vlek <jeroen@perceptivebits.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
ufmt_float = "0.2.0"
nb = "1.1.0"
embedded-hal = "1.0.0"
avr-device = "0.5.4"

[dependencies.either]
version = "1.10.0"
default-features = false


[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "190f2c3cb8d29e10f71119352b912369dc5a1fb7"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
